infra/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: ekc-frontend
  type: LoadBalancer
