infra/k8s/base/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-jaeger
spec:
  ports:
    - port: 16686
      targetPort: 16686
      name: web
    - port: 4317
      targetPort: 4317
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      name: otlp-http
  selector:
    app: ekc-jaeger
  type: ClusterIP
