infra/k8s/base/monitoring-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-prometheus
spec:
  ports:
    - port: 9090
      targetPort: 9090
      name: web
  selector:
    app: ekc-prometheus
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ekc-grafana
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: web
  selector:
    app: ekc-grafana
  type: ClusterIP
