infra/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekc-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: ekc-redis
  type: ClusterIP
